--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
+    "start": "astro dev",
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.6"
+    "@tailwindcss/vite": "^4.0.6",
+    "astro": "^5.2.6",
+    "tailwindcss": "^4.0.6"
   }
 }
